<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fresh_snow"
    android:orientation="horizontal"
    tools:context="com.iitb.mobileict.lokavidya.ui.Recording"
    >

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8">

        <LinearLayout
            android:id="@+id/button_panel_scaling"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <Button
                android:id="@+id/button_scaling_bad"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:padding="16dp"
                android:onClick="badButtonPressed"
                android:text="@string/bad"
                android:visibility="gone"/>
            <!--<Button
                android:id="@+id/button_scaling_fit"
                android:layout_weight="2.10"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/fit"
                android:onClick="fitButtonPressed"/>-->
            

            <Button
                android:id="@+id/imageChangeButton"
                android:layout_width="113dp"
                android:layout_weight="1"
                android:layout_height="36dp"
                android:textSize="16sp"
                android:text="@string/ChangeImage"
                android:onClick="onChangeImagePressed"
                />

            <Button
                android:id="@+id/button_scaling_crop"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:textSize="16sp"
                android:text="@string/crop"
                android:onClick="cropButtonPressed"/>

            <Button
                android:id="@+id/button_rotate"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/rotate"
                android:textSize="16sp"
                android:onClick="rotateButtonPressed"/>


        </LinearLayout>





            <View
                android:id="@+id/horizontal_rule"
                android:layout_width="236dp"
                android:layout_height="2dp"
                android:layout_gravity="left"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/button_panel_scaling"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8.3dp"/>
        <TextView
            android:id="@+id/link_text"
            android:text="Link Control"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_panel_scaling"
            android:layout_toRightOf="@id/horizontal_rule"
             />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linkControlLayout"
            android:layout_below="@+id/horizontal_rule"
            android:layout_marginTop="5dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="36dp"
                android:text="@string/link_button"
                android:id="@+id/linkButton"
                android:textSize="16sp"
                android:layout_gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:textSize="16sp"
                android:text="@string/remove_link_button"
                android:id="@+id/removeLinkButton"
                android:layout_gravity="center"/>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/record"
            android:id="@+id/startPlaying"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:textAppearanceSmall"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/done"
            android:id="@+id/stopPlaying"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/startPlaying"
            android:layout_toEndOf="@+id/startPlaying"
            android:textAppearance="?android:textAppearanceSmall" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/listen"
            android:id="@+id/pausePlaying"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/stopPlaying"
            android:layout_toEndOf="@+id/stopPlaying" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/retry"
            android:id="@+id/retryRecording"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/pausePlaying"
            android:layout_toEndOf="@+id/pausePlaying" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:progress="0"
            android:layout_above="@+id/startPlaying"
            android:layout_toRightOf="@+id/startPlaying"
            android:layout_toLeftOf="@+id/retryRecording"
            android:layout_toStartOf="@+id/retryRecording"
            android:indeterminate="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagePlaying"
            android:layout_below="@id/linkControlLayout"
            android:layout_above="@+id/seekBar" />



        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progBar"
            android:layout_above="@+id/startPlaying"
            android:layout_toRightOf="@+id/startPlaying"
            android:layout_toLeftOf="@+id/retryRecording"
            android:layout_toStartOf="@+id/retryRecording"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:id="@+id/current"
            android:layout_below="@+id/imagePlaying"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totallength"
            android:id="@+id/total"
            android:layout_below="@+id/imagePlaying"
            android:layout_toRightOf="@id/seekBar" />

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:layout_below="@+id/imagePlaying"
            android:layout_alignStart="@+id/retryRecording"
            android:layout_alignLeft="@+id/retryRecording"
            android:layout_toRightOf="@+id/progBar"
            android:visibility="gone"
            />
    </RelativeLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>

</LinearLayout>
