<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.UploadProject"
    android:weightSum="1">

    <TextView
        android:id="@+id/Uploadvideoheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadvideotext"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:paddingTop="15dp"
        android:typeface="monospace"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/upload_video_name_label"
        android:layout_below="@+id/Uploadvideoheading"
        android:padding="20sp"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:gravity="start" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/upload_video_input_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload_video_name_label"
        >

        <EditText
            android:id="@+id/uploadvideolanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/video_language_edittext" />



    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerlinearlayout"
        android:layout_below="@id/upload_video_input_lang"
        >

        <!-- Text Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/video_upload_category_spinner_textview"
            android:layout_marginBottom="5dp"
            />

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/videocategoryspinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/category_spinner_title"

            />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/upload_video_input_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerlinearlayout">

        <EditText
            android:id="@+id/keywordsedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_keywords_edittext" />



    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/upload_video_input_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_video_input_keywords">

    <EditText
        android:id="@+id/videodescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/video_description"
        android:inputType="textLongMessage" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>
</ScrollView>