<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_helpfeedback_activity_description"
        android:layout_marginTop="5dp"
        android:text="@string/helpfeedback_activity_description"/>
    <TextView
        android:id="@+id/textView_feedback_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_type"
        android:layout_below="@+id/textView_helpfeedback_activity_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_feedback"
        android:layout_below="@+id/textView_feedback_label"
        android:prompt="@string/spinner_title"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        style="@style/Widget.AppCompat.Spinner.Underlined">

    </android.support.v7.widget.AppCompatSpinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_feedback"
        android:id="@+id/view_TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:id="@+id/editText_feedback_description"
            android:layout_below="@+id/spinner_feedback"
            android:hint="Enter the description here"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:id="@+id/button_submit_feedback"
        android:layout_below="@+id/view_TextInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:textColor="@color/textColorPrimary"/>

</RelativeLayout>