<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fresh_snow">

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myprojects"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:typeface="monospace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteProject"
        android:textStyle="bold"
        android:id="@+id/button2"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="deleteProjectCallBack"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light"
        android:typeface="monospace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addProject"
        android:textStyle="bold"
        android:id="@+id/button"
        android:layout_marginTop="36dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:onClick="addProjectCallBack"
        android:layout_above="@id/button2"
        android:background="#e3f6ff87"
        android:typeface="monospace" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProjectList"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:stackFromBottom="false"
        android:layout_marginRight="21dp"
        android:layout_below="@id/titleHome"
        android:layout_above="@+id/button" />

</RelativeLayout>
